[package]
name = "geoc"
authors = ["Synaptic Simulations"]
version = "0.1.0"
edition = "2021"

[features]
generate = ["gdal"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
crossbeam = "0.8.1"
ctrlc = "3.2.2"
gdal = { git = "https://github.com/Synaptic-Simulations/gdal", optional = true }
rayon = "1.5.3"
resize = "0.7.3"
rgb = "0.8.32"
tracy = { package = "tracy_full", version = "1.2.0", features = [] }
thread_local = "1.1.4"

geo = { path = "../geo" }
