[package]
name = "render-debug"
authors = ["Synaptic Simulations"]
version = "0.1.0"
edition = "2021"

[dependencies]
render = { path = "../render" }

egui = "0.17.0"
egui_wgpu_backend = "0.17.0"
egui_winit_platform = { version = "0.14.0", features = ["clipboard"] }
env_logger = "0.9.0"
futures-lite = "1.12.0"
profiling = { version = "1.0.5", features = ["profile-with-tracing"] }
log = "0.4.17"
rfd = "0.8.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracy = { package = "tracy_full", version = "1.2.0", features = ["enable", "tracing", "wgpu"] }
wgpu = "0.12.0"
winit = "0.26.1"
