[package]
name = "render"
authors = ["Synaptic Simulations"]
version = "0.1.0"
edition = "2021"

[build-dependencies]
hassle-rs = "0.9.0"
walkdir = "2.3.2"

[dependencies]
geo = { path = "../geo" }

log = "0.4.17"
tracy = { package = "tracy_full", version = "1.2.0", features = ["wgpu"] }
wgpu = "0.12.0"
